# dcslROS

./: .gitignore  README  README.md  index.html  params.json
dcsl_beluga_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml  setup.py
dcsl_beluga_driver/arduino_sketchbook/belugaArduinoDriver/: belugaArduinoDriver.ino
dcsl_beluga_driver/launch/: dcsl_beluga_driver_joy.launch  dcsl_beluga_driver_joy_sysID.launch
dcsl_beluga_driver/msg/: belugaInput.msg
dcsl_beluga_driver/scripts/: depth_converter.py
dcsl_beluga_driver/src/: dcsl_beluga_joy.cpp  dcsl_beluga_joy_sysID.cpp
dcsl_beluga_driver/src/dcsl_beluga_driver/: depth_converter.py
dcsl_beluga_main/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
dcsl_beluga_main/launch/: 1robots.launch  2robots.launch  3robots.launch  4robots.launch  all_beluga_joy.launch  beluga0.launch  beluga_simulator.launch  beluga_system.launch  core_beluga.launch  robot0.launch  robot1.launch  robot2.launch  robot3.launch
dcsl_beluga_main/resources/: BelugaConsole.perspective
dcsl_beluga_main/src/dcsl_beluga_main/: beluga.py
dcsl_high_level_control/: CMakeLists.txt  mainpage.dox  manifest.xml  miabot_control_law.m  miabot_high_level.launch  miabot_high_level_matlab.m  package.xml  setup.py
dcsl_high_level_control/cfg/: dcsl_miabot_high_level_control_config.cfg
dcsl_high_level_control/launch/: miabot_high_level.launch  test_pose_array_subscriber.launch
dcsl_high_level_control/matlab/: miabot_control_law.m  miabot_high_level_matlab.m  test_state_input.m
dcsl_high_level_control/src/: dcsl_miabot_follower_control.cc  dcsl_miabot_high_level_math.cc  dcsl_miabot_high_level_math.h
dcsl_high_level_control/src/dcsl_high_level_control/: dcsl_miabot_high_level_control.py  miabot_logger.py  (+1 more)
dcsl_low_level_control/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
dcsl_low_level_control/cfg/: dcsl_beluga_low_level_control_config.cfg  dcsl_miabot_low_level_control_config.cfg
dcsl_low_level_control/config/: beluga_velocity.yaml  beluga_waypoint.yaml  vel_controller.yaml
dcsl_low_level_control/launch/: miabot_low_level.launch
dcsl_low_level_control/scripts/: dcsl_beluga_low_level_control.py
dcsl_low_level_control/src/: dcsl_miabot_control_math.cc  dcsl_miabot_control_math.h  dcsl_miabot_low_level_control.cc  dcsl_miabot_velocity_control.cc  dcsl_miabot_waypoint_control.cc
dcsl_messages/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
dcsl_messages/msg/: BelugaArray.msg  State.msg  StateArray.msg  TwistArray.msg  belugaInput.msg
dcsl_miabot_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  plugin.xml  setup.py
dcsl_miabot_driver/action/: ConnectMiabot.action
dcsl_miabot_driver/config/: miabot_dictionary.yaml
dcsl_miabot_driver/launch/: dcsl_miabot_driver_joy.launch  miabot_joy.launch  miabot_keyboard.launch
dcsl_miabot_driver/resource/: miabot_module.ui
dcsl_miabot_driver/scripts/: dcsl_miabot_driver.py  miabot_module.py
dcsl_miabot_driver/src/: dcsl_miabot_joy.cpp
dcsl_miabot_driver/test/: test_dcsl_miabot_driver_API.py
dcsl_miabot_main/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
dcsl_miabot_main/launch/: 1miabots.launch  2miabots.launch  3miabots.launch  4miabots.launch  5miabots.launch  6miabots.launch  7miabots.launch  core_miabot.launch  estimator_test.launch  miabot0.launch  miabot1.launch  miabot2.launch  miabot_follower.launch  miabot_main.launch  miabot_main3.launch  miabot_pycontrol.launch  miabot_robot.launch  miabot_rosmatlab.launch  miabot_simulator.launch  miabot_system.launch  no_estimator_main.launch
dcsl_miabot_main/resources/: MiabotConsole.perspective
dcsl_state_estimator/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
dcsl_state_estimator/scripts/: estimate_by_planar_passthrough.py
dcsl_state_estimator/src/: dcsl_miabot_estimator_math.cc  dcsl_miabot_estimator_math.h  dcsl_miabot_state_estimator.cc
dcsl_state_estimator/test/: miabot_estimator_math_test.cc  test_ekf_API.py
dcsl_swarm_director/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
dcsl_swarm_director/scripts/: dcsl_swarm_director_node.py
dcsl_swarm_simulator/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
dcsl_swarm_simulator/scripts/: beluga_sim.py
dcsl_vision_tracker/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  plugin.xml  setup.py
dcsl_vision_tracker/action/: GenerateBackground.action  ToggleTracking.action  ToggleWindow.action
dcsl_vision_tracker/cfg/: dcsl_beluga_tracker_config.cfg  dcsl_miabot_tracker_config.cfg
dcsl_vision_tracker/config/: 000a47010f093051.yaml  000a47010f093052.yaml  000a47010f094079.yaml  000a47010f0940ba.yaml  000a47010f0a58ee.yaml  000a4701120aa599.yaml  000a4701120aa59a.yaml  000a4701120aa5a0.yaml  camera1.yaml  camera2.yaml  camera3.yaml  camera4.yaml  miabot_camera.yaml  miabot_camera1.yaml  miabot_camera2.yaml  miabot_camera3.yaml  miabot_camera4.yaml  miabot_tracker_parameters.yaml
dcsl_vision_tracker/config-missing-background/: 000a47010f093052.yaml  000a47010f094079.yaml  000a47010f0940ba.yaml  000a4701120aaae2.yaml  camera3.yaml  miabot_camera3.yaml  miabot_camera4.yaml  miabot_tracker_parameters.yaml
dcsl_vision_tracker/launch/: backgroundImageGenerator.launch  belugaCamerasOnly.launch  beluga_background_generator.launch  beluga_cameras_only.launch  beluga_tracker.launch  beluga_tracker_test.launch  beluga_view_raw.launch  beluga_view_tracking.launch  miabot_background_generator.launch  miabot_camera_only.launch  miabot_cameras_only.launch  miabot_tracker.launch  miabot_tracker_test.launch  miabot_view_tracking.launch
dcsl_vision_tracker/resource/: tracker_module.ui
dcsl_vision_tracker/scripts/: background_generator.py  dcsl_beluga_tracker.py  dcsl_miabot_tracker.py  dcsl_vision_tracker_API.py  miabot_tracker.py
dcsl_vision_tracker/src/: dcsl_tracking_overlay.cpp
dcsl_vision_tracker/test/: test_dcsl_vision_tracker.py
dcsl_vision_tracker/tests/: test_dcsl_vision_tracker.py
(+591 files in other folders)
