<package>
  <name>dcsl_beluga_driver</name>
  <version>0.1.0</version>
  <description>Rosserial Arduino code for a node on-board the Beluga robot and a node of joystick control of the robot.</description>
  <maintainer email="brendan.andrade@alumni.tufts.edu">Brendan Andrade</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dcsl_beluga_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Brendan Andrade</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dcsl_messages</build_depend> 
  <build_depend>rosserial_python</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>dcsl_messages</run_depend>
  <run_depend>joy</run_depend>

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>
</package>