<package>
  <name>dcsl_beluga_main</name>
  <version>0.1.0</version>
  <description>dcsl_beluga_main</description>
  <maintainer email="brendan.andrade@alumni.tufts.edu">Brendan Andrade</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/beluga_main</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Brendan Andrade</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>dcsl_beluga_driver</run_depend>
  <run_depend>dcsl_vision_tracker</run_depend>
  <run_depend>dcsl_low_level_control</run_depend>
  <run_depend>dcsl_messages</run_depend>
  <run_depend>dcsl_state_estimator</run_depend>
  <run_depend>dcsl_swarm_director</run_depend>
  <!--<run_depend>dcsl_swarm_simulator</run_depend> Fix circular dependency -->
  <run_depend>python-numpy</run_depend>

  <export>

  </export>
</package>