<package>
  <name>dcsl_low_level_control</name>
  <version>0.1.0</version>
  <description>The dcsl_low_level_control package contains dcsl_miabot_low_level_control node and dcsl_miabot_control_math library. This purpose of this package is to link output from high level control to low level velocity inputs for the swarm controller.</description>
  <maintainer email="brendan.andrade@alumni.tufts.edu">Brendan Andrade</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dcsl_low_level_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Will Scott</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dcsl_messages</build_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>rospy</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dcsl_messages</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <!-- <test_depend>dcsl_messages</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->

  <export>

  </export>
</package>