<package>
  <name>dcsl_low_level_control</name>
  <version>0.1.0</version>
  <description>Velocity, waypoint, and joystick control and mode selecting nodes for the DCSL Beluga and MiabotPro robots.</description>
  <maintainer email="brendan.andrade@alumni.tufts.edu">Brendan Andrade</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dcsl_low_level_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Will Scott</author>
  <author>Brendan Andrade</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dcsl_messages</build_depend>
  <build_depend>rospy</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dcsl_messages</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>

 

  <export>

  </export>
</package>