<package>
  <name>dcsl_miabot_driver</name>
  <version>0.1.0</version>
  <description>
    Contains nodes for driving a Merlin MiabotPro and controlling it with a joystick. An action is defined to initiate and close the connection. A rqt plugin is provided for triggering the action.
  </description>
  <maintainer email="brendan.andrade@alumni.tufts.edu">
    Brendan Andrade
  </maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dcsl_miabot_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Brendan Andrade</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>genmsg</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rospkg</run_depend>
  <run_depend>python-bluez</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>