<package>
  <name>dcsl_swarm_director</name>
  <version>0.1.0</version>
  <description>dcsl_swarm_director unpackages array command message for multiple robots in individual topics for each robot.</description>
  <maintainer email="brendan.andrade@alumni.tufts.edu">Brendan Andrade</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dcsl_swarm_director</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Brendan Andrade</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>dcsl_messages</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dcsl_messages</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>