<package>
  <name>dcsl_swarm_simulator</name>
  <version>0.1.0</version>
  <description>Simulates the behavior of DCSL robots. It uses integration publish sensor data in place of running the real robots. </description>
  <maintainer email="brendan.andrade@alumni.tufts.edu">Brendan Andrade</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dcsl_swarm_simulator</url>
  <!-- <url type="bugtracker"></url> -->

  <author>bandrade</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dcsl_messages</build_depend>
  <build_depend>dcsl_beluga_main</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dcsl_messages</run_depend>
  <run_depend>dcsl_beluga_main</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>

</package>